packages/yak-swc/css_in_js_parser/src/snapshots/css_in_js_parser__to_css__tests__parse_css_incomplete_css_1.snap
---
source: src/to_css.rs
expression: to_css(&declarations)
---
.foo {
  .fancy {
    color: blue;
  }
}
